--- a/css/stories.css
+++ b/css/stories.css
@@ -10,6 +10,12 @@
   margin: 10px 0;
 }
 
+#favorited-stories,
+#my-stories {
+  list-style: none;
+  padding-left: 20px;
+}
+
 #stories-loading-msg {
   font-weight: bold;
   font-size: 150%;
@@ -18,6 +24,13 @@
 
 
 /* Individual stories */
+
+.star,
+.trash-can {
+  font-size: 0.75rem;
+  margin: 0 2px;
+  cursor: pointer
+}
 
 .story-link {
   color: black;
@@ -28,6 +41,10 @@
 
 .story-link:hover {
   text-decoration: none;
+}
+
+.story-author {
+  margin-left: 2em;
 }
 
 .story-author {
